--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
 
     <groupId>io.woolford</groupId>
     <artifactId>kafka-connect-json-jolt</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <version>1.0</version>
     <properties>
         <kafka.version>2.6.0</kafka.version>
         <jolt.version>0.1.1</jolt.version>
