--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,10 @@
 name: Build and Release
 
 on:
-  release:
-    types:
-      - created
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*'
 
 jobs:
   build:
