--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/*.jar
-          asset_name: my-app-${{ github.sha }}.jar
+          asset_path: **/target/*.jar
+          asset_name: my-app-${{ github.ref }}.jar
           asset_content_type: application/java-archive
