--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,6 +50,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/*.jar
-          asset_name: kafka-connect-json-jolt-${{ github.ref }}.jar
+          asset_path: ./target/kafka-connect-json-jolt-refs/tags/*.jar
+          asset_name: ${{ github.ref }}-jar-with-dependencies.jar
           asset_content_type: application/java-archive
