--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,7 @@ jobs:
           mvn clean install
           pwd
           find .
+          zip --junk-paths release-${{ github.ref }} ./target/*/tags/*jar-with-dependencies.jar
 
       - name: Create Release
         id: create_release
@@ -50,6 +51,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/kafka-connect-json-jolt-refs/tags/*.jar
-          asset_name: ${{ github.ref }}-jar-with-dependencies.jar
+          asset_path: ./
+          asset_name: release-${{ github.ref }}.zip
           asset_content_type: application/java-archive
