--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Get Tag Name
+        id: get_tag
+        run: |
+          tag=$(echo "${{ github.ref }}" | sed 's/refs\/tags\///')
+          echo "::set-output name=tag::$tag"
+          
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -29,7 +35,7 @@ jobs:
           mvn clean install
           pwd
           find .
-          zip --junk-paths release-${{ github.ref }} ./target/*/tags/*jar-with-dependencies.jar
+          zip --junk-paths release-${{ steps.get_tag.outputs.tag }} ./target/*/tags/*jar-with-dependencies.jar
 
       - name: Create Release
         id: create_release
@@ -52,5 +58,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./
-          asset_name: release-${{ github.ref }}.zip
+          asset_name: release-${{ steps.get_tag.outputs.tag }}.zip
           asset_content_type: application/java-archive
