--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,8 +34,8 @@ jobs:
           mvn versions:set -DnewVersion=${{ github.ref }}
           mvn clean install
           pwd
-          find .
           zip --junk-paths release-${{ steps.get_tag.outputs.tag }} ./target/*/tags/*jar-with-dependencies.jar
+          find .
 
       - name: Create Release
         id: create_release
@@ -57,6 +57,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./
+          asset_path: ./release-${{ steps.get_tag.outputs.tag }}.zip
           asset_name: release-${{ steps.get_tag.outputs.tag }}.zip
-          asset_content_type: application/java-archive
+          asset_content_type: application/zip
